--- a/simple-api/package.json
+++ b/simple-api/package.json
@@ -4,7 +4,8 @@
   "description": "A simple HTTP API for the zotero translation server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "forever index.js"
   },
   "author": "",
   "license": "ISC",
